@startuml D-LOCKSS Data Structures
skinparam classAttributeIconSize 0
skinparam linetype ortho

class ClusterManager {
    - host: host.Host
    - ipfsClient: IPFSClient
    - pubsub: *pubsub.PubSub
    - dht: routing.Routing
    - datastore: datastore.Datastore
    - trustedPeers: []peer.ID
    - onPinSynced: func(cid string)
    - onPinRemoved: func(cid string)
    - peerProvider: ShardPeerProvider
    - clusters: map[string]*EmbeddedCluster
    --
    + JoinShard(ctx, shardID, bootstrapPeers)
    + LeaveShard(shardID)
    + Pin(ctx, shardID, cid, repMin, repMax)
    + Unpin(ctx, shardID, cid)
    + ListPins(ctx, shardID)
    + GetAllocations(ctx, shardID, cid)
    + GetPeerCount(ctx, shardID)
    + MigratePins(ctx, fromShard, toShard)
    + TriggerSync(shardID)
    + SetShardPeerProvider(provider)
    + GetClusterMetrics(ctx)
}

class EmbeddedCluster {
    + ShardID: string
    + Consensus: ConsensusClient (CRDT)
    + PinTracker: *LocalPinTracker
}

class LocalPinTracker {
    - ipfsClient: IPFSClient
    - shardID: string
    - onPinSynced: func(cid string)
    - onPinRemoved: func(cid string)
    - pinnedByUs: map[string]struct{}
    --
    + Start(consensusClient)
    + TriggerSync()
    + Stop()
    + syncLoop(consensus)
    + syncState(consensus)  ' pins everything in shard CRDT (allocations are informational only)
}

ShardManager --> ClusterManager : manages
ClusterManager --> EmbeddedCluster : contains
EmbeddedCluster --> LocalPinTracker : owns

class ShardManager {
    - ctx: context.Context
    - cfg: *config.Config
    - h: host.Host
    - ps: *pubsub.PubSub
    - ipfsClient: ipfs.IPFSClient
    - storageMgr: StorageProvider
    - clusterMgr: ClusterManagerInterface
    - signer: MessageAuthenticator
    - rateLimiter: *common.RateLimiter
    - peers: *peerTracker
    - mu: sync.RWMutex
    - currentShard: string
    - shardSubs: map[string]*shardSubscription
    - probeTopicCache: map[string]*pubsub.Topic
    - observerOnlyShards: map[string]struct{}
    - reshardedFiles: *common.KnownFiles
    - orphanHandoffSent: map[...]
    - reprovideInFlight: atomic.Bool
    - repl: *replicationManager
    - lifecycle: *lifecycleManager
    --
    + NewShardManager(cfg ShardManagerConfig): (*ShardManager, error)
    + Run()
    + Close(): error
    + JoinShard(shardID): error
    + LeaveShard(shardID)
    + JoinShardAsObserver(shardID): bool
    + LeaveShardAsObserver(shardID)
    + AmIResponsibleFor(key): bool
    + PublishToShardCBOR(bytes, shardID)
    + PinToCluster(ctx, cid): error
    + EnsureClusterForShard(ctx, shardID): error
    + GetPeersForShard(shardID): []peer.ID
    + RunReshardPass(oldShard, newShard)
    + RunOrphanUnpinPass()
    + AnnouncePinned(manifestCID)
}

class replicationManager {
    - ops: replicationOps
    - mu: sync.Mutex
    - cooldown: map[string]time.Time
    - sem: chan struct{}
    --
    + runChecker()
    - sendReplicationRequests(ctx, cfg, shard, manifests)
    - handleRequest(msg, rr, shardID)
    - pruneCooldown()
}
note right of replicationManager
  Extracted from ShardManager.
  Owns replication request cooldown
  and auto-replication semaphore.
  Interacts with ShardManager via
  replicationOps interface.
end note

class lifecycleManager {
    - ops: lifecycleOps
    - cfg: *config.Config
    - mu: sync.Mutex
    - splitAboveThresholdCount: int
    - knownChildShards: map[string]time.Time
    - lastPeerCheck: time.Time
    --
    + runPeerCountChecker()
    + runShardDiscovery()
    + runSplitRebroadcast()
    - checkAndSplitIfNeeded()
    - checkAndMergeUpIfAlone()
    - discoverAndMoveToDeeperShard()
    - recordSplitAnnouncement(child0, child1)
}

ShardManager --> replicationManager : delegates replication
ShardManager --> lifecycleManager : delegates split/merge/discovery

note right of ShardManager
  PubSub topics: dlockss-creative-commons-shard-<id>.
  One subscription per shard (refCount); observer mode for probing.
  Lifecycle decisions delegated to lifecycleManager.
  Replication requests delegated to replicationManager.
  Code organized into focused files:
  shard_loops.go (message dispatch, heartbeat, pin reannounce),
  shard_msg_handlers.go, shard_reshard.go,
  shard_orphan.go, shard_legacy.go, shard_replication.go.
  Stability (v0.0.3):
  - ShardMoveCooldown (30s) after ANY transition
  - PROBE response rate limiting (5s)
  - Jittered discovery timers (0-25% random)
  - Immediate LEAVE on departure
end note

class ResearchObject {
    + MetadataRef: string
    + IngestedBy: peer.ID
    + Signature: []byte
    + Timestamp: int64
    + Payload: cid.Cid
    + TotalSize: uint64
}
note right of ResearchObject
  pkg/schema/types.go
  No Title/Authors/References in code.
end note

class IngestMessage {
    + Type: uint8
    + ManifestCID: cid.Cid
    + ShardID: string
    + HintSize: uint64
    + SenderID: peer.ID
    + Timestamp: int64
    + Nonce: []byte
    + Sig: []byte
}

class ReplicationRequest {
    + Type: uint8
    + ManifestCID: cid.Cid
    + Priority: uint8
    + Deadline: int64
    + SenderID: peer.ID
    + Timestamp: int64
    + Nonce: []byte
    + Sig: []byte
}

class StorageManager {
    - cfg: *config.Config
    - dht: DHTProvider
    - pinnedFiles: *common.PinnedSet
    - knownFiles: *common.KnownFiles
    - recentlyRemoved: *common.RecentlyRemoved
    - fileReplicationLevels: *common.FileReplicationLevels
    - failedOperations: *BackoffTable
    - metrics: *telemetry.MetricsManager
    - provideSem: chan struct{}
    --
    + PinFile(manifestCIDStr)
    + UnpinFile(key)
    + IsPinned(key): bool
    + AddKnownFile(key)
    + GetPinnedManifests(): []string
    + GetKnownFiles(): *KnownFiles
    + GetNextFileToAnnounce(): string
    + ProvideFile(ctx, cidStr)  ' bounded by MaxConcurrentDHTProvides semaphore
}

class cachedReplication {
    + count: int
    + cachedAt: time.Time
}

class Metrics {
    + pinnedFilesCount: int
    + knownFilesCount: int
    + messagesReceived: int64
    + messagesDropped: int64
    + replicationChecks: int64
    + replicationSuccess: int64
    + replicationFailures: int64
    + shardSplits: int64
    + replicationDistribution: [11]int
    + filesAtTargetReplication: int
    + avgReplicationLevel: float64
    + filesConvergedTotal: int64
    + cumulativeMessagesReceived: int64
    + cumulativeDhtQueries: int64
    + ...
}

class RateLimiter {
    + peers: map[peer.ID]*peerRateLimit
}

class peerRateLimit {
    + messages: []time.Time
    + mu: sync.Mutex
}

class BackoffTable {
    + m: map[string]*operationBackoff
}

class operationBackoff {
    + nextRetry: time.Time
    + delay: time.Duration
    + mu: sync.Mutex
}

class PendingVerifications {
    + m: map[string]*verificationPending
}

class verificationPending {
    + firstCount: int
    + firstCheckTime: time.Time
    + verifyTime: time.Time
    + responsible: bool
    + pinned: bool
}

ShardManager --> StorageManager : GetPinnedManifests, AddKnownFile, IsPinned, GetPinTime
StorageManager --> PinnedSet : pinnedFiles
StorageManager --> KnownFiles : knownFiles
StorageManager --> Metrics : updates

class PinnedSet {
    + m: map[string]time.Time
    + Add(key), Remove(key), Has(key), GetPinTime(key), All()
}

class KnownFiles {
    + m: map[string]bool
    + Add(key), Remove(key), Has(key), All()
}
RateLimiter --> peerRateLimit : contains
BackoffTable --> operationBackoff : contains

class Config {
    + DiscoveryServiceTag: string
    + PubsubTopicPrefix: string
    + TopicName: string
    + FileWatchFolder: string
    + NodeName: string
    + IPFSNodeAddress: string
    + ...
    --
    + Sharding: ShardingConfig
    + Replication: ReplicationConfig
    + Files: FileConfig
    + Security: SecurityConfig
    + Orphan: OrphanConfig
    --
    + DefaultConfig(): *Config
    + LoadFromEnv(): *Config
    + Validate(): error
    + Log()
}

class ShardingConfig {
    + MaxPeersPerShard: int
    + MinPeersPerShard: int
    + MinPeersAcrossSiblings: int
    + ShardMoveCooldown: time.Duration
    + ShardOverlapDuration: time.Duration
    + ShardPeerCheckInterval: time.Duration
    + ShardDiscoveryInterval: time.Duration
    + ShardSplitRebroadcastInterval: time.Duration
    + ...
}

class ReplicationConfig {
    + MinReplication: int
    + MaxReplication: int
    + CheckInterval: time.Duration
    + AutoReplicationEnabled: bool
    + AutoReplicationTimeout: time.Duration
    + MaxConcurrentReplicationChecks: int
    + ...
}

Config --> ShardingConfig
Config --> ReplicationConfig

@enduml
